# mcp-audit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mcp_audit/: __init__.py  cli.py  scanner.py
src/mcp_audit/checks/: __init__.py  base.py  registry.py
src/mcp_audit/checks/builtin/: __init__.py  mcp001_plaintext_secrets.py  mcp002_credentials_in_args.py  mcp003_wildcard_approve.py  mcp004_tool_poisoning.py  mcp005_full_schema_poisoning.py  mcp006_filesystem_scope.py  mcp007_unverified_npm.py  mcp008_missing_https.py  mcp009_file_permissions.py  mcp010_unresolved_env_vars.py  mcp011_known_cves.py  mcp012_rug_pull.py
src/mcp_audit/config/: __init__.py  discovery.py  loader.py  models.py
src/mcp_audit/data/: cve_list.json
src/mcp_audit/output/: __init__.py  json_output.py  sarif.py  table.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_scanner.py
tests/fixtures/: e2e_all_vulns.json  vulnerable_config.json
tests/test_checks/: test_mcp001.py  test_mcp002.py  test_mcp003.py  test_mcp004.py  test_mcp005.py  test_mcp006.py  test_mcp007.py  test_mcp008.py  test_mcp009.py  test_mcp010.py  test_mcp011.py  test_mcp012.py  test_registry.py
tests/test_config/: test_discovery.py  test_loader.py  test_models.py
tests/test_output/: test_json_output.py  test_sarif.py
